// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PageLoader > should render PageLoader with default props 1`] = `
<DocumentFragment>
  <div
    style="height: 400px; border: 1px dashed rgb(204, 204, 204);"
  >
    <div
      class="flex items-center justify-center flex-col gap-3 flex-grow w-full min-h-96 h-full"
    >
      <div
        class="max-w-xs w-full flex justify-center"
      >
        <div
          aria-label="Loading page"
          class="inline-block animate-spin rounded-full w-6 h-6 border-2 border-primary border-t-transparent"
          role="status"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PageLoader > should render bar type loading indicator 1`] = `
<DocumentFragment>
  <div
    style="height: 300px; border: 1px dashed rgb(204, 204, 204);"
  >
    <div
      class="flex items-center justify-center flex-col gap-3 flex-grow w-full min-h-96 h-full"
    >
      <div
        class="max-w-xs w-full flex justify-center"
      >
        <div
          aria-label="Loading page"
          class="w-full rounded h-1 bg-neutral/40 relative overflow-hidden"
          role="progressbar"
        >
          <div
            aria-hidden="true"
            class="absolute left-0 top-0 w-full h-full rounded bg-neutral/40 pointer-events-none"
          />
          <div
            aria-hidden="true"
            class="absolute left-0 top-0 h-full w-1/3 animate-loading-bar rounded-full bg-secondary"
          />
        </div>
      </div>
      <p
        aria-live="polite"
        class="text-foreground-light text-sm text-center max-w-xs"
      >
        Processing your request...
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PageLoader > should render minimal variant 1`] = `
<DocumentFragment>
  <div
    style="border: 1px dashed rgb(204, 204, 204);"
  >
    <div
      style="padding: 20px; background-color: rgb(245, 245, 245);"
    >
      <h3>
        Section Title
      </h3>
      <div
        class="flex items-center justify-center flex-col gap-3 flex-grow w-full min-h-32 py-8"
      >
        <div
          class="max-w-xs w-full flex justify-center"
        >
          <div
            aria-label="Loading page"
            class="inline-block animate-spin rounded-full w-4 h-4 border-2 border-tertiary border-t-transparent"
            role="status"
          />
        </div>
        <p
          aria-live="polite"
          class="text-foreground-light text-sm text-center max-w-xs"
        >
          Loading...
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
